Fixed header to be stretched on full width

--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -2,12 +2,17 @@
   position: sticky;
   top: 0;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 16px;
   padding: 16px;
   height: 48px;
   background-color: var(--color-primary-500);
+}
+
+.header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+  flex-grow: 1;
 }
 
 .header__name {
