--- a/styles/body.css
+++ b/styles/body.css
@@ -3,7 +3,4 @@
   font-size: 16px;
   color: var(--color-gray-900);
   background-color: var(--color-gray-100);
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
 }
